[gd_scene load_steps=6 format=3 uid="uid://crm6y18r5xin6"]

[ext_resource type="Script" uid="uid://cw00njh8uwnug" path="res://scripts/PlayerUI.gd" id="1_yjkh2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dxn3u"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7j2rr"]
bg_color = Color(0.2, 0.2, 0.2, 0.4)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqp8w"]
bg_color = Color(0.133333, 0.545098, 0.901961, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xf6p8"]
bg_color = Color(0.8, 0.2, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjkh2")

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 160.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dxn3u")

[node name="GoldContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 290.0
offset_bottom = 70.0

[node name="GoldIcon" type="TextureRect" parent="GoldContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4

[node name="GoldLabel" type="Label" parent="GoldContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"
vertical_alignment = 1

[node name="LevelContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 70.0
offset_right = 170.0
offset_bottom = 150.0

[node name="LevelLabel" type="Label" parent="LevelContainer"]
layout_mode = 2
text = "Level: 1"

[node name="XPBar" type="ProgressBar" parent="LevelContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_7j2rr")
theme_override_styles/fill = SubResource("StyleBoxFlat_kqp8w")
max_value = 4.0
value = 1.0
show_percentage = false

[node name="BuyXPButton" type="Button" parent="LevelContainer"]
layout_mode = 2
text = "Buy XP (4 Gold)"

[node name="HealthContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 70.0
offset_right = 290.0
offset_bottom = 150.0

[node name="HealthLabel" type="Label" parent="HealthContainer"]
layout_mode = 2
text = "100/100"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="HealthContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_7j2rr")
theme_override_styles/fill = SubResource("StyleBoxFlat_xf6p8")
value = 100.0
show_percentage = false

[node name="RerollButton" type="Button" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 120.0
offset_right = 290.0
offset_bottom = 150.0
text = "Reroll (2 Gold)"

[connection signal="pressed" from="LevelContainer/BuyXPButton" to="." method="_on_buy_xp_button_pressed"]
[connection signal="pressed" from="RerollButton" to="." method="_on_reroll_button_pressed"]
